Test web server v3 (#78)
* Update device_base.yaml

updated to web server v3

* Update temperature_dallas.yaml

added sorting group

* sorting groups

* Update device_base.yaml

* Update device_base.yaml

* updates

* sort group

* sorting groups

* syntax

* weights updated

* test

* sorting fixes

* Update aquapi_config.yaml

* Update device_base.yaml

* fixes

* Update ezo_pmp.yaml

* Update ezo_pmp_duo.yaml

* sort updates

* Update temperature_dallas_2.yaml

* Update aquapi_config.yaml

temp_2 updates

* update

* sorting added

* sorting added

* soerting added

* sorting added

* updates

* updates

* Update aquapi_config.yaml

--- a/aquapi_config.yaml
+++ b/aquapi_config.yaml
@@ -1,16 +1,16 @@
 substitutions:
+  # App Version
+  app_version: "24.10.13"
   # names
   name: "aquapi"
   friendly_name: "AquaPi"
-  # App Version - Updated: 6/2024
-  app_version: "24.8.2"
 
 packages:
   device_base: !include common/device_base.yaml
   aquapi: !include common/aquapi.yaml
   # ota_https: !include common/ota_https.yaml
   dallas: !include common/temperature_dallas.yaml
-  optical: !include common/optical.yaml
+  water_level: !include common/water_level.yaml
   binary: !include common/binary.yaml
   # ir_receiver: !include common/ir_receiver.yaml
   # dht: !include common/dht.yaml
