--- a/common/temperature_dallas_2.yaml
+++ b/common/temperature_dallas_2.yaml
@@ -25,6 +25,9 @@ sensor:
     on_value: 
       then:
         - component.update: temp_range_2
+    web_server:
+      sorting_group_id: sorting_group_temperature
+      sorting_weight: 60
 
   # Convert to Fahrenheit - Temp. 2
   - platform: template
@@ -33,11 +36,15 @@ sensor:
     id: temp_f_2
     lambda: |-
       return id(temp_2).state * 9 / 5 + 32;
+    web_server:
+      sorting_group_id: sorting_group_temperature
+      sorting_weight: 69
 
   # Calibration Temp. 2 at 0C
   - platform: template
     name: Calibration at 0°C  - Temp. 2
     id: cal_0_2_sen
+    disabled_by_default: true
     icon: mdi:thermometer-low
     unit_of_measurement: "°C"
     state_class: "measurement"
@@ -45,11 +52,15 @@ sensor:
     entity_category: "diagnostic"
     lambda: |-
       return {${cal_0_2}};
+    web_server:
+      sorting_group_id: sorting_group_temperature
+      sorting_weight: 69
 
   # Calibration Temp. 2 at 100C
   - platform: template
     name: Calibration at 100°C - Temp. 2
     id: cal_100_2_sen
+    disabled_by_default: true
     icon: mdi:weather-sunny-alert
     unit_of_measurement: "°C"
     state_class: "measurement"
@@ -57,6 +68,9 @@ sensor:
     entity_category: "diagnostic"
     lambda: |-
       return {${cal_100_2}};
+    web_server:
+      sorting_group_id: sorting_group_temperature
+      sorting_weight: 69
 
 binary_sensor:
   - platform: template
@@ -69,6 +83,9 @@ binary_sensor:
       } else {
         return false;
       }
+    web_server:
+      sorting_group_id: sorting_group_temperature
+      sorting_weight: 69
 
 text_sensor:
   # Temperature Range 2
@@ -90,6 +107,9 @@ text_sensor:
       else {
         return {"Unknown"};
       }
+    web_server:
+      sorting_group_id: sorting_group_temperature
+      sorting_weight: 62
 
 number:
   # Temperature 2 when Cool
@@ -109,6 +129,9 @@ number:
     on_value: 
       then:
         - component.update: temp_range_2
+    web_server:
+      sorting_group_id: sorting_group_temperature
+      sorting_weight: 69
 
   # Temperature 2 when Warm
   - platform: template
@@ -127,3 +150,6 @@ number:
     on_value: 
       then:
         - component.update: temp_range_2
+    web_server:
+      sorting_group_id: sorting_group_temperature
+      sorting_weight: 69
