--- a/common/ezo_pmp_duo.yaml
+++ b/common/ezo_pmp_duo.yaml
@@ -1,17 +1,29 @@
 substitutions:
   # PMP circuit, who's address is 103
-  addPMP_1: "108" # Red - Waste
-  addPMP_2: "109" # Green - Clean
-  update_pmp_1: "60s"
-  update_pmp_2: "60s"
+  addPMP_green: "109" # Green - Clean
+  addPMP_red: "108" # Red - Waste
+  update_pmp_green: "60s"
+  update_pmp_red: "60s"
+
+  sorting_group_pump_green_weight: '81'
+  sorting_group_pump_red_weight: '82'
+
+web_server:
+  sorting_groups:
+    - id: sorting_group_pump_green
+      name: "Pump - Green"
+      sorting_weight: ${sorting_group_pump_green_weight}
+    - id: sorting_group_pump_red
+      name: "Pump - Red"
+      sorting_weight: ${sorting_group_pump_red_weight}
   
 ezo_pmp:
-  - id: ezo_pump_red
-    address: ${addPMP_1}
-    update_interval: "${update_pmp_1}"
   - id: ezo_pump_green
-    address: ${addPMP_2}
-    update_interval: "${update_pmp_2}"
+    address: ${addPMP_green}
+    update_interval: "${update_pmp_green}"
+  - id: ezo_pump_red
+    address: ${addPMP_red}
+    update_interval: "${update_pmp_red}"
 
 api:
   services: 
@@ -136,56 +148,7 @@ api:
               return address;
 
 sensor:
-  - platform: ezo_pmp
-    id: ezo_pump_red
-    current_volume_dosed:
-      id: current_volume_dosed_waste
-      name: Pump Waste - Current Volume Dosed
-      icon: mdi:cube-scan
-      device_class: 'volume'
-      state_class: total
-      unit_of_measurement: 'mL'
-  - platform: ezo_pmp
-    id: ezo_pump_red
-    total_volume_dosed:
-      id: total_volume_dosed_waste
-      name: Pump Waste - Total Volume Dosed
-      icon: mdi:timer-sand-empty
-      device_class: 'volume'
-      unit_of_measurement: 'mL'
-      disabled_by_default: true
-  - platform: ezo_pmp
-    id: ezo_pump_red
-    absolute_total_volume_dosed:
-      id: absolute_total_volume_dosed_waste
-      name: Pump Waste - Absolute Total Volume Dosed
-      icon: mdi:timer-sand-full
-      device_class: 'volume'
-      state_class: total
-      unit_of_measurement: 'mL'
-  - platform: ezo_pmp
-    id: ezo_pump_red
-    last_volume_requested:
-      id: last_volume_requested_waste
-      name: Pump Waste - Last Volume Requested
-      icon: mdi:history
-      state_class: total
-      device_class: 'volume'
-      unit_of_measurement: 'mL'
-  - platform: ezo_pmp
-    id: ezo_pump_red
-    max_flow_rate:
-      id: max_flow_rate_waste
-      name: Pump Waste - Max Volume/Time Flow Rate
-      icon: mdi:car-speed-limiter
-      unit_of_measurement: 'mL/min'
-  - platform: ezo_pmp
-    id: ezo_pump_red
-    pump_voltage:
-      id: pump_voltage_waste
-      name: Pump Waste - Voltage
-      disabled_by_default: true
-      device_class: 'voltage'
+  # Green
   - platform: ezo_pmp
     id: ezo_pump_green
     current_volume_dosed:
@@ -195,6 +158,8 @@ sensor:
       device_class: 'volume'
       state_class: total
       unit_of_measurement: 'mL'
+      web_server:
+        sorting_group_id: sorting_group_pump_green
   - platform: ezo_pmp
     id: ezo_pump_green
     total_volume_dosed:
@@ -204,6 +169,8 @@ sensor:
       disabled_by_default: true
       device_class: 'volume'
       unit_of_measurement: 'mL'
+      web_server:
+        sorting_group_id: sorting_group_pump_green
   - platform: ezo_pmp
     id: ezo_pump_green
     absolute_total_volume_dosed:
@@ -213,6 +180,8 @@ sensor:
       device_class: 'volume'
       state_class: total
       unit_of_measurement: 'mL'
+      web_server:
+        sorting_group_id: sorting_group_pump_green
   - platform: ezo_pmp
     id: ezo_pump_green
     last_volume_requested:
@@ -222,6 +191,8 @@ sensor:
       device_class: 'volume'
       state_class: total
       unit_of_measurement: 'mL'
+      web_server:
+        sorting_group_id: sorting_group_pump_green
   - platform: ezo_pmp
     id: ezo_pump_green
     max_flow_rate:
@@ -229,61 +200,133 @@ sensor:
       name: Pump Clean - Max Volume/Time Flow Rate
       icon: mdi:car-speed-limiter
       unit_of_measurement: 'mL/min'
+      web_server:
+        sorting_group_id: sorting_group_pump_green
   - platform: ezo_pmp
     id: ezo_pump_green
     pump_voltage:
       id: pump_voltage_clean
       name: Pump Clean - Voltage
+      icon: mdi:lightning-bolt-circle
       disabled_by_default: true
       device_class: 'voltage'
+      web_server:
+        sorting_group_id: sorting_group_pump_green
+
+  # Red
+  - platform: ezo_pmp
+    id: ezo_pump_red
+    current_volume_dosed:
+      id: current_volume_dosed_waste
+      name: Pump Waste - Current Volume Dosed
+      icon: mdi:cube-scan
+      device_class: 'volume'
+      state_class: total
+      unit_of_measurement: 'mL'
+      web_server:
+        sorting_group_id: sorting_group_pump_red
+  - platform: ezo_pmp
+    id: ezo_pump_red
+    total_volume_dosed:
+      id: total_volume_dosed_waste
+      name: Pump Waste - Total Volume Dosed
+      icon: mdi:timer-sand-empty
+      device_class: 'volume'
+      unit_of_measurement: 'mL'
+      disabled_by_default: true
+      web_server:
+        sorting_group_id: sorting_group_pump_red
+  - platform: ezo_pmp
+    id: ezo_pump_red
+    absolute_total_volume_dosed:
+      id: absolute_total_volume_dosed_waste
+      name: Pump Waste - Absolute Total Volume Dosed
+      icon: mdi:timer-sand-full
+      device_class: 'volume'
+      state_class: total
+      unit_of_measurement: 'mL'
+      web_server:
+        sorting_group_id: sorting_group_pump_red
+  - platform: ezo_pmp
+    id: ezo_pump_red
+    last_volume_requested:
+      id: last_volume_requested_waste
+      name: Pump Waste - Last Volume Requested
+      icon: mdi:history
+      state_class: total
+      device_class: 'volume'
+      unit_of_measurement: 'mL'
+      web_server:
+        sorting_group_id: sorting_group_pump_red
+  - platform: ezo_pmp
+    id: ezo_pump_red
+    max_flow_rate:
+      id: max_flow_rate_waste
+      name: Pump Waste - Max Volume/Time Flow Rate
+      icon: mdi:car-speed-limiter
+      unit_of_measurement: 'mL/min'
+      web_server:
+        sorting_group_id: sorting_group_pump_red
+  - platform: ezo_pmp
+    id: ezo_pump_red
+    pump_voltage:
+      id: pump_voltage_waste
+      name: Pump Waste - Voltage
+      icon: mdi:lightning-bolt-circle
+      disabled_by_default: true
+      device_class: 'voltage'
+      web_server:
+        sorting_group_id: sorting_group_pump_red
 
 binary_sensor:
-  - platform: ezo_pmp
-    id: ezo_pump_red
-    pump_state:
-      id: pump_state_waste
-      icon: mdi:pump
-      name: Pump Waste - State
-  - platform: ezo_pmp
-    id: ezo_pump_red
-    is_paused:
-      id: is_paused_waste
-      name: Pump Waste - Paused Status
-      disabled_by_default: true
+  # Green
   - platform: ezo_pmp
     id: ezo_pump_green
     pump_state:
       id: pump_state_clean
       icon: mdi:pump
       name: Pump Clean - State
+      web_server:
+        sorting_group_id: sorting_group_pump_green
   - platform: ezo_pmp
     id: ezo_pump_green
     is_paused:
       id: is_paused_clean
       name: Pump Clean - Paused Status
+      icon: mdi:pause
       disabled_by_default: true
+      web_server:
+        sorting_group_id: sorting_group_pump_green
 
+  # Red
+  - platform: ezo_pmp
+    id: ezo_pump_red
+    pump_state:
+      id: pump_state_waste
+      icon: mdi:pump
+      name: Pump Waste - State
+      web_server:
+        sorting_group_id: sorting_group_pump_red
+  - platform: ezo_pmp
+    id: ezo_pump_red
+    is_paused:
+      id: is_paused_waste
+      name: Pump Waste - Paused Status
+      icon: mdi:pause
+      disabled_by_default: true
+      web_server:
+        sorting_group_id: sorting_group_pump_red
 
 text_sensor:
-  - platform: ezo_pmp
-    id: ezo_pump_red
-    dosing_mode:
-      id: dosing_mode_waste
-      name: Pump Waste - Dosing Mode 
-      icon: mdi:auto-mode
-  - platform: ezo_pmp
-    id: ezo_pump_red
-    calibration_status:
-      id: calibration_status_waste
-      name: Pump Waste - Calibration Status
-      # disabled_by_default: true
-      icon: mdi:tape-measure
+  # Green
   - platform: ezo_pmp
     id: ezo_pump_green
     dosing_mode:
       id: dosing_mode_clean
       name: Pump Clean - Dosing Mode 
       icon: mdi:auto-mode
+      web_server:
+        sorting_group_id: sorting_group_pump_green
   - platform: ezo_pmp
     id: ezo_pump_green
     calibration_status:
@@ -291,43 +334,30 @@ text_sensor:
       name: Pump Clean - Calibration Status
       # disabled_by_default: true
       icon: mdi:tape-measure
+      web_server:
+        sorting_group_id: sorting_group_pump_green
+
+  # Red
+  - platform: ezo_pmp
+    id: ezo_pump_red
+    dosing_mode:
+      id: dosing_mode_waste
+      name: Pump Waste - Dosing Mode 
+      icon: mdi:auto-mode
+      web_server:
+        sorting_group_id: sorting_group_pump_red
+  - platform: ezo_pmp
+    id: ezo_pump_red
+    calibration_status:
+      id: calibration_status_waste
+      name: Pump Waste - Calibration Status
+      # disabled_by_default: true
+      icon: mdi:tape-measure
+      web_server:
+        sorting_group_id: sorting_group_pump_red
 
 number:
-  - platform: template
-    id: volume_waste
-    icon: mdi:pump
-    name: Pump Waste - Volume to Dose
-    device_class: 'volume'
-    unit_of_measurement: 'mL'
-    optimistic: true
-    initial_value: 10 # cannot be less than +/-0.1mL
-    min_value: -378541
-    max_value: 378541 # 100 gal
-    mode: box
-    step: 0.1
-  - platform: template
-    id: duration_waste
-    icon: mdi:timer
-    name: Pump Waste - Time to Dose
-    device_class: 'duration'
-    unit_of_measurement: 'min'
-    optimistic: true
-    initial_value: 1
-    min_value: 1
-    max_value: 1440 # 24 hours
-    mode: box
-    step: 0.1
-  - platform: template
-    id: flow_rate_waste
-    icon: mdi:waves-arrow-left
-    name: Pump Waste - Volume/Time Flow Rate
-    unit_of_measurement: 'mL/min'
-    optimistic: true
-    initial_value: 10
-    min_value: .5
-    max_value: 105 # may need to lower to 40
-    mode: box
-    step: 0.1
+  # Green
   - platform: template
     id: volume_clean
     icon: mdi:pump
@@ -340,6 +370,8 @@ number:
     max_value: 378541 # 100 gal
     mode: box
     step: 0.1
+    web_server:
+      sorting_group_id: sorting_group_pump_green
   - platform: template
     id: duration_clean
     icon: mdi:timer
@@ -352,6 +384,8 @@ number:
     max_value: 1440 # 24 hours
     mode: box
     step: 0.1
+    web_server:
+      sorting_group_id: sorting_group_pump_green
   - platform: template
     id: flow_rate_clean
     icon: mdi:waves-arrow-right
@@ -363,87 +397,54 @@ number:
     max_value: 105 # may need to lower to 40
     mode: box
     step: 0.1
+    web_server:
+      sorting_group_id: sorting_group_pump_green
+
+  # Red
+  - platform: template
+    id: volume_waste
+    icon: mdi:pump
+    name: Pump Waste - Volume to Dose
+    device_class: 'volume'
+    unit_of_measurement: 'mL'
+    optimistic: true
+    initial_value: 10 # cannot be less than +/-0.1mL
+    min_value: -378541
+    max_value: 378541 # 100 gal
+    mode: box
+    step: 0.1
+    web_server:
+      sorting_group_id: sorting_group_pump_red
+  - platform: template
+    id: duration_waste
+    icon: mdi:timer
+    name: Pump Waste - Time to Dose
+    device_class: 'duration'
+    unit_of_measurement: 'min'
+    optimistic: true
+    initial_value: 1
+    min_value: 1
+    max_value: 1440 # 24 hours
+    mode: box
+    step: 0.1
+    web_server:
+      sorting_group_id: sorting_group_pump_red
+  - platform: template
+    id: flow_rate_waste
+    icon: mdi:waves-arrow-left
+    name: Pump Waste - Volume/Time Flow Rate
+    unit_of_measurement: 'mL/min'
+    optimistic: true
+    initial_value: 10
+    min_value: .5
+    max_value: 105 # may need to lower to 40
+    mode: box
+    step: 0.1
+    web_server:
+      sorting_group_id: sorting_group_pump_red
 
 button:
-  # TODO Make UI
-  - platform: template
-    name: Pump Waste - Dose Volume for Time
-    icon: mdi:clock-time-two-outline
-    id: dose_over_time_waste
-    on_press:
-      - ezo_pmp.dose_volume_over_time:
-          id: ezo_pump_red
-          volume: !lambda |-
-            return id(volume_waste).state;
-          duration: !lambda |-
-            return id(duration_waste).state;
-  - platform: template
-    name: Pump Waste - Dose Continuously
-    icon: mdi:infinity
-    id: dose_continuously_waste
-    on_press:
-      - ezo_pmp.dose_continuously:
-          id: ezo_pump_red
-  - platform: template
-    name: Pump Waste - Dose Volume
-    icon: mdi:pump
-    id: dose_volume_waste
-    on_press:
-      - ezo_pmp.dose_volume:
-          id: ezo_pump_red
-          volume: !lambda |-
-            return id(volume_waste).state;
-  - platform: template
-    name: Pump Waste - Dose at Volume/Time Flow Rate for Time
-    icon: mdi:format-text-wrapping-overflow
-    id: dose_flow_rate_waste
-    on_press:
-      - ezo_pmp.dose_with_constant_flow_rate:
-          id: ezo_pump_red
-          volume_per_minute: !lambda |-
-            return id(flow_rate_waste).state;
-          duration: !lambda |-
-            return id(duration_waste).state;
-  - platform: template
-    name: Pump Waste - Pause Dosing
-    icon: mdi:pause
-    id: dose_pause_waste
-    on_press:
-      - ezo_pmp.pause_dosing:
-          id: ezo_pump_red
-  - platform: template
-    name: Pump Waste - Stop Dosing
-    icon: mdi:stop
-    id: dose_stop_waste
-    on_press:
-      - ezo_pmp.stop_dosing:
-          id: ezo_pump_red
-  - platform: template
-    name: Pump Waste - Clear Total Volume Dosed
-    icon: mdi:backspace
-    id: dose_clear_waste
-    on_press:
-      - ezo_pmp.clear_total_volume_dosed:
-          id: ezo_pump_red
-
-  # Calibrate
-  - platform: template
-    name: Pump Waste - Set Calibration Volume
-    icon: mdi:tape-measure
-    id: dose_calibrate_volume_waste
-    on_press:
-      - ezo_pmp.set_calibration_volume:
-          id: ezo_pump_red
-          volume: !lambda |-
-            return id(volume_waste).state;
-  - platform: template
-    name: Pump Waste - Clear Calibration Volume
-    icon: mdi:cancel
-    id: dose_calibrate_volume_clear_waste
-    on_press:
-      - ezo_pmp.clear_calibration:
-          id: ezo_pump_red
-          
+  # Green
   - platform: template
     name: Pump Clean - Dose Volume for Time
     icon: mdi:clock-time-two-outline
@@ -455,6 +456,8 @@ button:
             return id(volume_clean).state;
           duration: !lambda |-
             return id(duration_clean).state;
+    web_server:
+      sorting_group_id: sorting_group_pump_green
   - platform: template
     name: Pump Clean - Dose Continuously
     icon: mdi:infinity
@@ -462,6 +465,8 @@ button:
     on_press:
       - ezo_pmp.dose_continuously:
           id: ezo_pump_green
+    web_server:
+      sorting_group_id: sorting_group_pump_green
   - platform: template
     name: Pump Clean - Dose Volume
     icon: mdi:pump
@@ -471,6 +476,8 @@ button:
           id: ezo_pump_green
           volume: !lambda |-
             return id(volume_clean).state;
+    web_server:
+      sorting_group_id: sorting_group_pump_green
   - platform: template
     name: Pump Clean - Dose at Volume/Time Flow Rate for Time
     icon: mdi:format-text-wrapping-overflow
@@ -482,6 +489,8 @@ button:
             return id(flow_rate_clean).state;
           duration: !lambda |-
             return id(duration_clean).state;
+    web_server:
+      sorting_group_id: sorting_group_pump_green
   - platform: template
     name: Pump Clean - Pause Dosing
     icon: mdi:pause
@@ -489,6 +498,8 @@ button:
     on_press:
       - ezo_pmp.pause_dosing:
           id: ezo_pump_green
+    web_server:
+      sorting_group_id: sorting_group_pump_green
   - platform: template
     name: Pump Clean - Stop Dosing
     icon: mdi:stop
@@ -496,6 +507,8 @@ button:
     on_press:
       - ezo_pmp.stop_dosing:
           id: ezo_pump_green
+    web_server:
+      sorting_group_id: sorting_group_pump_green
   - platform: template
     name: Pump Clean - Clear Total Volume Dosed
     icon: mdi:backspace
@@ -503,8 +516,8 @@ button:
     on_press:
       - ezo_pmp.clear_total_volume_dosed:
           id: ezo_pump_green
-
-  # Calibrate
+    web_server:
+      sorting_group_id: sorting_group_pump_green
   - platform: template
     name: Pump Clean - Set Calibration Volume
     icon: mdi:tape-measure
@@ -514,6 +527,8 @@ button:
           id: ezo_pump_green
           volume: !lambda |-
             return id(volume_clean).state;
+    web_server:
+      sorting_group_id: sorting_group_pump_green
   - platform: template
     name: Pump Clean - Clear Calibration Volume
     icon: mdi:cancel
@@ -521,3 +536,100 @@ button:
     on_press:
       - ezo_pmp.clear_calibration:
           id: ezo_pump_green
+    web_server:
+      sorting_group_id: sorting_group_pump_green
+        
+  # Red
+  - platform: template
+    name: Pump Waste - Dose Volume for Time
+    icon: mdi:clock-time-two-outline
+    id: dose_over_time_waste
+    on_press:
+      - ezo_pmp.dose_volume_over_time:
+          id: ezo_pump_red
+          volume: !lambda |-
+            return id(volume_waste).state;
+          duration: !lambda |-
+            return id(duration_waste).state;
+    web_server:
+      sorting_group_id: sorting_group_pump_red
+  - platform: template
+    name: Pump Waste - Dose Continuously
+    icon: mdi:infinity
+    id: dose_continuously_waste
+    on_press:
+      - ezo_pmp.dose_continuously:
+          id: ezo_pump_red
+    web_server:
+      sorting_group_id: sorting_group_pump_red
+  - platform: template
+    name: Pump Waste - Dose Volume
+    icon: mdi:pump
+    id: dose_volume_waste
+    on_press:
+      - ezo_pmp.dose_volume:
+          id: ezo_pump_red
+          volume: !lambda |-
+            return id(volume_waste).state;
+    web_server:
+      sorting_group_id: sorting_group_pump_red
+  - platform: template
+    name: Pump Waste - Dose at Volume/Time Flow Rate for Time
+    icon: mdi:format-text-wrapping-overflow
+    id: dose_flow_rate_waste
+    on_press:
+      - ezo_pmp.dose_with_constant_flow_rate:
+          id: ezo_pump_red
+          volume_per_minute: !lambda |-
+            return id(flow_rate_waste).state;
+          duration: !lambda |-
+            return id(duration_waste).state;
+    web_server:
+      sorting_group_id: sorting_group_pump_red
+  - platform: template
+    name: Pump Waste - Pause Dosing
+    icon: mdi:pause
+    id: dose_pause_waste
+    on_press:
+      - ezo_pmp.pause_dosing:
+          id: ezo_pump_red
+    web_server:
+      sorting_group_id: sorting_group_pump_red
+  - platform: template
+    name: Pump Waste - Stop Dosing
+    icon: mdi:stop
+    id: dose_stop_waste
+    on_press:
+      - ezo_pmp.stop_dosing:
+          id: ezo_pump_red
+    web_server:
+      sorting_group_id: sorting_group_pump_red
+  - platform: template
+    name: Pump Waste - Clear Total Volume Dosed
+    icon: mdi:backspace
+    id: dose_clear_waste
+    on_press:
+      - ezo_pmp.clear_total_volume_dosed:
+          id: ezo_pump_red
+    web_server:
+      sorting_group_id: sorting_group_pump_red
+  - platform: template
+    name: Pump Waste - Set Calibration Volume
+    icon: mdi:tape-measure
+    id: dose_calibrate_volume_waste
+    on_press:
+      - ezo_pmp.set_calibration_volume:
+          id: ezo_pump_red
+          volume: !lambda |-
+            return id(volume_waste).state;
+    web_server:
+      sorting_group_id: sorting_group_pump_red
+  - platform: template
+    name: Pump Waste - Clear Calibration Volume
+    icon: mdi:cancel
+    id: dose_calibrate_volume_clear_waste
+    on_press:
+      - ezo_pmp.clear_calibration:
+          id: ezo_pump_red
+    web_server:
+      sorting_group_id: sorting_group_pump_red
