--- a/common/ezo_pmp_extra.yaml
+++ b/common/ezo_pmp_extra.yaml
@@ -1,18 +1,25 @@
 substitutions:
   # PMP circuit
-  addPMP_4: "110" # Orange
+  addPMP_orange: "110" # Orange
+  addPMP_yellow: "104" # Yellow
+  addPMP_blue: "106" # Blue
 
-  # TODO Add Rest of Pumps
-  addPMP_5: "104" # Yellow
-  addPMP_6: "106" # Blue
-  update_pmp_4: "60s"
-  update_pmp_5: "60s"  
-  update_pmp_6: "60s"
+  update_pmp_orange: "60s"
+  update_pmp_yellow: "60s"  
+  update_pmp_blue: "60s"
+
+  sorting_group_pump_orange_weight: '83'
+
+web_server:
+  sorting_groups:
+    - id: sorting_group_pump_orange
+      name: "Pump - Orange"
+      sorting_weight: ${sorting_group_pump_orange_weight}
 
 ezo_pmp:
   - id: ezo_pump_orange
-    address: ${addPMP_4}
-    update_interval: "${update_pmp_4}"
+    address: ${addPMP_orange}
+    update_interval: "${update_pmp_orange}"
 
 api:
   services: 
@@ -72,6 +79,8 @@ sensor:
       device_class: 'volume'
       state_class: total
       unit_of_measurement: 'mL'
+      web_server:
+        sorting_group_id: sorting_group_pump_orange
   - platform: ezo_pmp
     id: ezo_pump_orange
     total_volume_dosed:
@@ -81,6 +90,8 @@ sensor:
       device_class: 'volume'
       unit_of_measurement: 'mL'
       disabled_by_default: true
+      web_server:
+        sorting_group_id: sorting_group_pump_orange
   - platform: ezo_pmp
     id: ezo_pump_orange
     absolute_total_volume_dosed:
@@ -90,6 +101,8 @@ sensor:
       device_class: 'volume'
       state_class: total
       unit_of_measurement: 'mL'
+      web_server:
+        sorting_group_id: sorting_group_pump_orange
   - platform: ezo_pmp
     id: ezo_pump_orange
     last_volume_requested:
@@ -99,6 +112,8 @@ sensor:
       device_class: 'volume'
       state_class: total
       unit_of_measurement: 'mL'
+      web_server:
+        sorting_group_id: sorting_group_pump_orange
   - platform: ezo_pmp
     id: ezo_pump_orange
     max_flow_rate:
@@ -106,13 +121,18 @@ sensor:
       name: Pump 2 - Max Volume/Time Flow Rate
       icon: mdi:car-speed-limiter
       unit_of_measurement: 'mL/min'
+      web_server:
+        sorting_group_id: sorting_group_pump_orange
   - platform: ezo_pmp
     id: ezo_pump_orange
     pump_voltage:
       id: pump_orange_voltage
       name: Pump 2 - Voltage
       disabled_by_default: true
+      icon: mdi:lightning-bolt-circle
       device_class: 'voltage'
+      web_server:
+        sorting_group_id: sorting_group_pump_orange
 
 binary_sensor:
   - platform: ezo_pmp
@@ -126,7 +146,10 @@ binary_sensor:
     is_paused:
       id: is_paused_2
       name: Pump 2 - Paused Status
+      icon: mdi:pause
       disabled_by_default: true
+      web_server:
+        sorting_group_id: sorting_group_pump_orange
 
 text_sensor:
   - platform: ezo_pmp
@@ -135,6 +158,8 @@ text_sensor:
       id: dosing_mode_2
       name: Pump 2 - Dosing Mode 
       icon: mdi:auto-mode
+      web_server:
+        sorting_group_id: sorting_group_pump_orange
   - platform: ezo_pmp
     id: ezo_pump_orange
     calibration_status:
@@ -142,6 +167,8 @@ text_sensor:
       name: Pump 2 - Calibration Status
       # disabled_by_default: true
       icon: mdi:tape-measure
+      web_server:
+        sorting_group_id: sorting_group_pump_orange
 
 number:
   - platform: template
@@ -156,6 +183,8 @@ number:
     max_value: 378541 # 100 gal
     mode: box
     step: 0.1
+      web_server:
+        sorting_group_id: sorting_group_pump_orange
   - platform: template
     id: duration_2
     icon: mdi:timer
@@ -168,6 +197,8 @@ number:
     max_value: 1440 # 24 hours
     mode: box
     step: 0.1
+      web_server:
+        sorting_group_id: sorting_group_pump_orange
   - platform: template
     id: flow_rate_2
     icon: mdi:waves-arrow-right
@@ -179,6 +210,8 @@ number:
     max_value: 105 # may need to lower to 40
     mode: box
     step: 0.1
+      web_server:
+        sorting_group_id: sorting_group_pump_orange
 
 button:
   # TODO Make UI
@@ -193,6 +226,8 @@ button:
             return id(volume).state;
           duration: !lambda |-
             return id(duration).state;
+      web_server:
+        sorting_group_id: sorting_group_pump_orange
   - platform: template
     name: Pump 2 - Dose Continuously
     icon: mdi:infinity
@@ -200,6 +235,8 @@ button:
     on_press:
       - ezo_pmp.dose_continuously:
           id: ezo_pump_orange
+      web_server:
+        sorting_group_id: sorting_group_pump_orange
   - platform: template
     name: Pump 2 - Dose Volume
     icon: mdi:pump_orange
@@ -209,6 +246,8 @@ button:
           id: ezo_pump_orange
           volume: !lambda |-
             return id(volume).state;
+      web_server:
+        sorting_group_id: sorting_group_pump_orange
   - platform: template
     name: Pump 2 - Dose at Volume/Time Flow Rate for Time
     icon: mdi:format-text-wrapping-overflow
@@ -220,6 +259,8 @@ button:
             return id(flow_rate).state;
           duration: !lambda |-
             return id(duration).state;
+      web_server:
+        sorting_group_id: sorting_group_pump_orange
   - platform: template
     name: Pump 2 - Pause Dosing
     icon: mdi:pause
@@ -227,6 +268,8 @@ button:
     on_press:
       - ezo_pmp.pause_dosing:
           id: ezo_pump_orange
+      web_server:
+        sorting_group_id: sorting_group_pump_orange
   - platform: template
     name: Pump 2 - Stop Dosing
     icon: mdi:stop
@@ -234,6 +277,8 @@ button:
     on_press:
       - ezo_pmp.stop_dosing:
           id: ezo_pump_orange
+      web_server:
+        sorting_group_id: sorting_group_pump_orange
   - platform: template
     name: Pump 2 - Clear Total Volume Dosed
     icon: mdi:backspace
@@ -241,6 +286,8 @@ button:
     on_press:
       - ezo_pmp.clear_total_volume_dosed:
           id: ezo_pump_orange
+      web_server:
+        sorting_group_id: sorting_group_pump_orange
 
   # Calibrate
   - platform: template
@@ -252,6 +299,8 @@ button:
           id: ezo_pump_orange
           volume: !lambda |-
             return id(volume).state;
+      web_server:
+        sorting_group_id: sorting_group_pump_orange
   - platform: template
     name: Pump 2 - Clear Calibration Volume
     icon: mdi:cancel
@@ -259,3 +308,5 @@ button:
     on_press:
       - ezo_pmp.clear_calibration:
           id: ezo_pump_orange
+      web_server:
+        sorting_group_id: sorting_group_pump_orange
