--- a/common/binary.yaml
+++ b/common/binary.yaml
@@ -5,6 +5,7 @@ substitutions:
 binary_sensor:
   - platform: gpio
     id: binary_1
+    disabled_by_default: true
     pin: 
       number: ${binary_1}
       inverted: true
@@ -17,6 +18,7 @@ binary_sensor:
     web_server:
       sorting_group_id: sorting_group_misc
     icon: mdi:check-circle
+
   - platform: gpio
     id: leak_sensor
     pin: 
