--- a/.github/workflows/publish-firmware.yml
+++ b/.github/workflows/publish-firmware.yml
@@ -17,7 +17,7 @@ jobs:
       files: |
         aquapi_config.yaml
       esphome-version: 2024.11.1
-      combined-name: AquaPi
+      # combined-name: AquaPi
 
       release-summary: ${{ github.event.release.body }}
       release-url: ${{ github.event.release.html_url }}
