--- a/aquapi_config.yaml
+++ b/aquapi_config.yaml
@@ -1,6 +1,6 @@
 substitutions:
   # App Version
-  app_version: "24.10.14"
+  app_version: "24.11.2"
   # names
   name: "aquapi"
   friendly_name: "AquaPi"
@@ -8,7 +8,7 @@ substitutions:
 packages:
   device_base: !include common/device_base.yaml
   aquapi: !include common/aquapi.yaml
-  # ota_https: !include common/ota_https.yaml
+  ota_https: !include common/ota_https.yaml
   dallas: !include common/temperature_dallas.yaml
   water_level: !include common/water_level.yaml
   binary: !include common/binary.yaml
