Do and more (#77)
* Update device_base.yaml

updated to web server v3

* Update temperature_dallas.yaml

added sorting group

* sorting groups

* Update device_base.yaml

* Update device_base.yaml

* updates

* sort group

* sorting groups

* syntax

* weights updated

* test

* sorting fixes

* Update aquapi_config.yaml

* Update device_base.yaml

* fixes

* Update ezo_pmp.yaml

* Update ezo_pmp_duo.yaml

* sort updates

* Update temperature_dallas_2.yaml

* Update aquapi_config.yaml

temp_2 updates

* update

* sorting added

* sorting added

* soerting added

* sorting added

* updates

* updates

* Update aquapi_config.yaml

* DO support and others

* compile fixes

* Update aquapi_config.yaml

enable do.yaml

* Update device_base.yaml

removed send_ezo_command

* Update ci.yml (#80)

* Merge (#81)

* Update ci.yml

* Add files via upload

* Update aquapi_config.factory.yaml

* Update ci.yml

* Update ezo_do.yaml

* Update binary.yaml

* Update aquapi_config.factory.yaml

* Update aquapi_config.factory.yaml

--- a/common/device_base.yaml
+++ b/common/device_base.yaml
@@ -37,6 +37,12 @@ logger:
   level: "${logger}"
 
 api:
+  # actions:
+  #   - action: send_ezo_command
+  #     variables:
+  #       command: string
+  #     then:
+  #       - lambda: return command;
 
 ota:
   - platform: esphome
