--- a/common/ota_https.yaml
+++ b/common/ota_https.yaml
@@ -1,6 +1,6 @@
-# substitutions:
-#   # update_firmware_sensor_interval: 6s
-#   update_firmware_sensor_interval: 6h
+substitutions:
+  # update_firmware_sensor_interval: 6s
+  update_firmware_sensor_interval: 6h
 
 ota:
   - platform: http_request
@@ -8,16 +8,16 @@ ota:
 http_request:
   verify_ssl: false
 
-# update:
-#   - platform: http_request
-#     name: AquaPi Firmware Update
-#     update_interval: "${update_firmware_sensor_interval}"
-#     id: update_firmware_sensor
-#     entity_category: 'diagnostic'
-#     icon: mdi:update
-#     source: https://raw.githubusercontent.com/TheRealFalseReality/aquapi/refs/heads/main/bin/aquapi.manifest.json
-#     web_server:
-#       sorting_group_id: sorting_group_diagnostic
+update:
+  - platform: http_request
+    name: AquaPi Firmware Update
+    update_interval: "${update_firmware_sensor_interval}"
+    id: update_firmware_sensor
+    entity_category: 'diagnostic'
+    icon: mdi:update
+    source: https://raw.githubusercontent.com/TheRealFalseReality/aquapi/refs/heads/main/bin/aquapi.manifest.json
+    web_server:
+      sorting_group_id: sorting_group_diagnostic
 
 # button:
 #   - platform: template
