--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,8 +36,8 @@ jobs:
         with:
           yaml-file: ${{ matrix.file }}.yaml
           version: ${{ matrix.esphome-version }}
-      - name: ESPHome ${{ matrix.esphome-version }} Factory
-        uses: esphome/build-action@v4.0.3
-        with:
-          yaml-file: ${{ matrix.file }}.factory.yaml
-          version: ${{ matrix.esphome-version }}
+      # - name: ESPHome ${{ matrix.esphome-version }} Factory
+      #   uses: esphome/build-action@v4.0.3
+      #   with:
+      #     yaml-file: ${{ matrix.file }}.factory.yaml
+      #     version: ${{ matrix.esphome-version }}
