--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,8 +26,8 @@ jobs:
 
         esphome-version:
           - stable
-          - beta
-          - dev
+          # - beta
+          # - dev
     steps:
       - name: Checkout source code
         uses: actions/checkout@v4.1.7
