--- a/aquapi_config.factory.yaml
+++ b/aquapi_config.factory.yaml
@@ -1,6 +1,6 @@
 packages:
   # Include all of the core configuration
-  core: !include aquapi_config.yaml@main
+  core: !include aquapi_config.yaml
   
 esphome:
   # This will allow for project identification,
