--- a/common/device_base.yaml
+++ b/common/device_base.yaml
@@ -18,7 +18,7 @@ esphome:
   name: "${name}"
   friendly_name: "${friendly_name}"
   # Automatically add the mac address to the name
-  name_add_mac_suffix: "${suffix}"
+  name_add_mac_suffix: ${suffix}
   comment: "AquaPi ESP32 - Aquarium Controller & Monitor"
   project:
     name: TheRealFalseReality.aquapi
