--- a/common/device_base.yaml
+++ b/common/device_base.yaml
@@ -3,7 +3,6 @@ substitutions:
   import_config: "false"
   # Logger Level - Can use VERBOSE for more information in Logs
   logger: "DEBUG"
-  suffix: "true"
 
   # I2C pins
   sdaPin: "21" # yellow/TX PMP-green
@@ -18,7 +17,7 @@ esphome:
   name: "${name}"
   friendly_name: "${friendly_name}"
   # Automatically add the mac address to the name
-  name_add_mac_suffix: ${suffix}
+  name_add_mac_suffix: true
   comment: "AquaPi ESP32 - Aquarium Controller & Monitor"
   project:
     name: TheRealFalseReality.aquapi
