--- a/aquapi_config.factory.yaml
+++ b/aquapi_config.factory.yaml
@@ -6,5 +6,5 @@ esphome:
   # This will allow for project identification,
   # configuration and updates.
   project:
-    name: esphome.aquapi
+    name: therealfalsereality.aquapi
     version: dev # This will be replaced by the github workflows with the `release` version
