--- a/common/ota_https.yaml
+++ b/common/ota_https.yaml
@@ -1,3 +1,6 @@
+substitutions:
+  ota_update_interval: 6h
+
 ota:
   - platform: http_request
 
@@ -9,6 +12,7 @@ update:
     name: AquaPi Firmware Update
     id: update_firmware_sensor
     entity_category: 'diagnostic'
+    update_interval: ${ota_update_interval}
     icon: mdi:update
     source: https://therealfalsereality.github.io/aquapi/firmware/aquapi.manifest.json
     web_server:
