--- a/aquapi_config.yaml
+++ b/aquapi_config.yaml
@@ -4,6 +4,9 @@ substitutions:
   # names
   name: "aquapi"
   friendly_name: "AquaPi"
+  comment: "AquaPi ESP32 - Aquarium Controller & Monitor"
+  project_name: "therealfalsereality.aquapi"
+  sorting_group_name: "AquaPi "
 
 packages:
   device_base: !include common/device_base.yaml
