--- a/common/aquapi.yaml
+++ b/common/aquapi.yaml
@@ -1,35 +1,9 @@
 substitutions:
-  sorting_group_misc_weight: '97'
-  sorting_group_diagnostic_weight: '98'
-  sorting_group_config_weight: '99'
-
-esphome:
-  min_version: 2024.6.0
-  name: "${name}"
-  friendly_name: "${friendly_name}"
-  # Automatically add the mac address to the name
-  name_add_mac_suffix: true
-  comment: "AquaPi ESP32 - Aquarium Controller & Monitor"
-  project:
-    name: therealfalsereality.aquapi
-    version: "${app_version}"
+  sorting_group_name: "AquaPi"
 
 dashboard_import:
   package_import_url: github://TheRealFalseReality/aquapi/aquapi_config.yaml@main
   import_full_config: false
-
-web_server:
-  version: 3
-  sorting_groups:
-    - id: sorting_group_diagnostic
-      name: "AquaPi Diagnostic"
-      sorting_weight: ${sorting_group_diagnostic_weight}
-    - id: sorting_group_config
-      name: "AquaPi Configuration"
-      sorting_weight: ${sorting_group_config_weight}
-    - id: sorting_group_misc
-      name: "Misc. Sensors"
-      sorting_weight: ${sorting_group_misc_weight}
       
 text_sensor: 
   # AquaPi Version
