--- a/common/aquapi.yaml
+++ b/common/aquapi.yaml
@@ -5,6 +5,7 @@ substitutions:
   comment: "AquaPi ESP32 - Aquarium Controller & Monitor"
   project_name: "therealfalsereality.aquapi"
   sorting_group_name: "AquaPi "
+  import: "false"
 
 dashboard_import:
   package_import_url: github://TheRealFalseReality/aquapi/aquapi_config.yaml@main
